# FinGraph-AML-System

./: .gitignore  README.md  TODO.md  check_labels.py  docker-compose.yml  get_ids.py  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile.app  Dockerfile.lambda
docs/: ALGORITHM_EXPLAINED.md  DEPLOYMENT_GUIDE.md
src/fingraph/api/: app.py  lambda_handler.py
src/fingraph/core/: inference.py  model.py  train.py
src/fingraph/utils/: logger.py
tests/: test_api.py  test_model.py
